# chipy-minimal-python-package-demo

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: code-quality.yml
scripts/: run_conversions.py
src/converters/: __init__.py  converters.py
tests/: test_converters.py
